--- a/css/styles.css
+++ b/css/styles.css
@@ -33,21 +33,171 @@ h1 {
 }
 
 
-/* Header */
+h2, h3, .btn {
+    font-family: 'Roboto Condensed', sans-serif;
+}
 
+.btn {
+    background-color: var(--accent);
+    border-radius: 3px;
+    color: var(--dark);
+    display: inline-block;
+    margin-bottom: 2rem;
+    padding: 0.5rem 4.5rem;
+    text-align: center;
+    text-decoration: none;
+    text-transform: lowercase;
+    transition: all 0.5s ease;
+    white-space: nowrap;
+    letter-spacing: .1rem;
+
+}
+
+.btn:hover {
+    background-color: var(--hover);
+    letter-spacing: 2px;
+}
+
+
+/* Header */
+header{
+    align-items: center;
+    text-align: center;
+}
+header h1{
+    font-size: 3.4em;
+}
+header p{
+    font-size: 1em;
+    text-transform: uppercase; 
+    letter-spacing: .1rem;
+}
 
 /* Hero Banner */
+.hero{
+    background-image: url('../img/hero.webp');
+    color: var(--white)
+}
+.hero h2{
+    font-size: 3.2rem;
+    font-weight: 100;
+    text-align: center;
+    text-transform: lowercase;
+    padding-top: 8rem;
+}
+.hero h2 span{
+    text-align: left;
+}
+.hero p{
+    
+}
 
+/* CSS */
+.button-5 {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: var(--hover);
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: var(--dark);
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.button-5:hover,
+.button-5:focus {
+  background-color: var(--accent);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.button-5:hover {
+  transform: translateY(-1px);
+}
+
+.button-5:active {
+  background-color: var(--accent);
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
+}
 
 /* Parallax */
+
+section.intro {
+    background: url('../img/splash-mobile.webp') center / cover no-repeat fixed;
+}
+
+
+
 
 
 
 /* Horizontal Scroll */
+.scroll-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-bottom: 5rem;
+    overflow-x: scroll;
+}
 
+.card {
+    border: 1px solid #ddd;
+    border-radius: 0.2rem;
+    box-shadow: 3px 3px 3px #eee;
+    flex: 0 0 24rem;
+    margin: 2rem 1rem;
+}
+
+.card img {
+    border-radius: 0.2rem 0.2rem 0 0;
+}
+
+.card-body {
+    text-align: center;
+}
+
+/* This is for webkit browsers only */
+.scroll-wrapper::-webkit-scrollbar {
+    background-color: #eee;
+    width: 0.5rem;
+}
+
+.scroll-wrapper::-webkit-scrollbar-thumb {
+    border-radius: 2rem;
+    background-color: var(--accent);
+}
+
+/* As of 2022, this is for Firefox only */
+
+.scroll-wrapper {
+    scrollbar-color: #444 #eee;
+    scrollbar-width: thin;
+}
 
 
 /* Footer */
+header, footer{
+    background-color: var(--pop);
+    color: var(--white);
+}
+
 
 
 
